--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
   display: flex;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  height: 100vh;
-  width: 100vw;
-  justify-content: center;
-  align-items: center;
+  
 }
 
 main {
@@ -62,4 +63,13 @@ li:hover {
 a {
   font-weight: 800;
   text-decoration: none;
+}
+
+.w-45 {
+  width: 80%;
+}
+
+/* Add these base styles */
+html, body, #root {
+  @apply w-full h-full m-0 p-0 items-center justify-center;
 }
